# prometheus-rust-latency-collection

./: Cargo.toml  README.md  prometheus.yml
src/: main.rs
