[package]
name = "prometheus-test"
version = "0.1.0"
authors = ["Rohan Gautam <rohan1gautam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
warp = "0.2"
prometheus = { version = "0.9", features = ["process"] }
lazy_static = "1.4"
# futures = { version = "0.3", default-features = false }
rand = "0.7"